UI | HDRI preview #124377
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#124377
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 555.99
Blender Version
Broken: version: 4.2.0 Beta, branch: blender-v4.2-release, commit date: 2024-07-02 18:32, hash:
edd1749e2222
Worked: (4.1.1)
@fclem
I can confirm this issue. Setting to high priority since it is a regression, although not a major one.
For developers, here is a description of the issue, and the steps to reproduce:
Description:
EEVEE's HDRI preview is shifted and squished/stretched inside the render border.
Steps to reproduce
System Information
Operating system: macOS-14.4.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2
Blender version: 4.2.0 Beta, branch: blender-v4.2-release, commit date: 2024-07-08 23:30, hash:
1f42c9eb54de
I have left the original report un-modified for moderation to take a look at.
wdym 😑
everything u need to know is in the video 🤨
i keep it nice and short and straight to the point 🙃
Hi, video is good but having short description and steps in words helps, see: https://developer.blender.org/docs/handbook/bug_reports/making_good_bug_reports/
For future reports, please avoid tagging module developers. Sometimes it may not be a bug but they would receive a email because you tagged them (sounds like a spam, no?) 🙂
Best to not extend this discussion further and stay on topic of this bug report.
@hornpub You have been asked several times now not to tag developers in your reports. It's up to the triaging team to tag reports with corresponding module labels and tag developers directly if needed.
Thanks for your understanding.
Cause of this issue is that the lookdev spheres are rendered before the film accumulation step. This results into several artifacts what the film accumulation is handling. This includes bordered rendering, but also upsampling and in future it would also effect panoramic rendering.
IOW current implementation isn't what we want.
I will check to move the rendering of the lookdev spheres to after the film accumulation step, but that requires a different render view for them to render correctly. The fix might not make it before the initial release as it won't be tested by many users. But it should be part of a future update.
I might get back to this issue after I did all the platform support issues.
After further investigation the cause is different and the viewport of the 3d viewport isn't reset which pushed the HDRI preview to the render border.
why this is a big deal 😑 . the tagged guy himself didnt complane . when he did ill quite 🗿 . otherwise DO NOT interfere ✋️
@hornpub There are several developers working on Blender. How do you know the one you tagged will be working on this? He will get a mail notification for something he may not even need to look at.
Basically how things work on here are
I hope this is clearer now. Please follow it for further reports.